--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
     "host": "42.194.223.48",
     "port": 3306,
     "user": "root",
-    "password": "12345678",
+    "password": "Mysql@123",
     "db_name": "haotian_test",
     "charset": "utf8mb4",
     "show_sql": false
